# bookstore

./: Cargo.toml  build.rs
admin/: app-window.slint  book-management.slint  customer-order.slint  customer-view.slint  login.slint  purchase-list.slint  search-customer-detail.slint  search-customer.slint  supplier-detail.slint  user-detail.slint  user.slint
sql/: bookstore.sql  bookstore_9_0_1_9.sql
src/: global.rs  lib.rs  main.rs
src/controller/: admin.rs  book.rs  index.rs  mod.rs  order.rs  purchase_order.rs  shortage.rs  supplier.rs  user.rs
src/entity/: admin.rs  auth.rs  author.rs  book.rs  customer.rs  enums.rs  keyword.rs  location.rs  mod.rs  order.rs  price_inquiry.rs  publisher.rs  purchase_order.rs  series.rs  shortage.rs  stock.rs  supplier.rs
src/network/: mod.rs  request.rs  response.rs
src/repo/: admin.rs  auth.rs  book.rs  mod.rs  order.rs  publisher.rs  purchase_order.rs  shortage.rs  stock.rs  supplier.rs  user.rs  utils.rs
src/service/: admin.rs  auth.rs  book.rs  mod.rs  order.rs  purchase_order.rs  shortage.rs  (+3 more)
ui/: about.slint  add-book.slint  add-new-book.slint  admin-cart.slint  app-window.slint  book-cart.slint  book-detail.slint  book-edit.slint  book-list.slint  book-management.slint  book-shortage.slint  customer-order.slint  customer-view.slint  login.slint  order-detail.slint  order-history.slint  purchase-order-detail.slint  purchase-order-history.slint  restock-order.slint  search-book.slint  search-customer.slint  shortage-detail.slint  side-bar.slint  supplier-view.slint  user-detail.slint  user.slint  util-widget.slint
(+7 files in other folders)
