[package]
name = "bookstore"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.94"
chrono = "0.4.39"
log = "0.4.22"
mysql_async = "0.34.2"
mysql_common = { version = "0.33.0",features = ["bigdecimal","time"] }
pretty_env_logger = "0.5.0"
ring = "0.17.8"
serde = { version = "1.0.215", features = ["derive"] }
base64 = "0.22.1"
rand = "0.8.5"
actix-files = "0.6.6"
