[package]
name = "bookstore-user"
version = "0.1.0"
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.94"
image = "0.25.5"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
slint = { version = "1.8.0", features = ["renderer-winit-skia"] }
tokio = { version = "1.42.0", features = ["rt-multi-thread"] }
bytes = "1.9.0"
rust_decimal = "1.36.0"

[build-dependencies]
slint-build = "1.8.0"
